<resources>
    <string name="app_name">Odinia</string>

    <!--Facebook-->
    <string name="facebook_app_id">1216133538718341</string>
    <string name="fb_login_protocol_scheme">fb1216133538718341</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_item_home">Inicio</string>
    <string name="menu_item_entries">Ingresos</string>
    <string name="menu_item_egress">Gastos</string>
    <string name="menu_item_payments">Pagos programados</string>
    <string name="menu_item_movements">Actividad</string>
    <string name="menu_item_help">Ayuda</string>
    <string name="menu_item_settings">Configuracion</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Odinia</string>
    <string name="nav_header_subtitle">odinia.group@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_gallery">Gallery</string>
    <string name="category_text">Categoría</string>
    <string name="description_text">Nota</string>
    <string name="add_note_placeholder">Añadir nota</string>
    <string name="date_text">Fecha</string>
    <string name="account_text">Cuenta</string>
    <string name="minus_text">-</string>
    <string name="usd_text">usd</string>
    <string name="next_slide_text">Siguiente</string>


    <!-- ONLY FOR DESIGN -->
    <string-array name="accounts">
        <item>Efectivo</item>
        <item>Tarjeta BAC</item>
        <item>Tarjeta Banco Agricola</item>
    </string-array>

    <string-array name="typeCategory">
        <item>Ingreso</item>
        <item>Egreso</item>
    </string-array>

    <string-array name="categories_pays">
        <item>Comida / Bebida</item>
        <item>Compras</item>
        <item>Transporte</item>
        <item>Vivienda</item>
        <item>Entretenimiento</item>
    </string-array>

    <string-array name="purchases">
        <item>Café</item>
        <item>Camiseta</item>
        <item>Hamburguesa</item>
        <item>Zapatos de Vestir</item>
        <item>Pastel de cumpleaños</item>
    </string-array>

    <string-array name="cardview_color">
        <item>Predeterminado</item>
        <item>Azul Oscuro</item>
        <item>Gris Oscuro</item>
        <item>Verde Oscuro</item>
        <item>Ocre</item>
        <item>Plateado</item>
    </string-array>

    <string name="no_account_message">No tienes ninguna cuenta asociada</string>
    <string name="add_account_message">Agregar una cuenta</string>
    <string name="image_btn_content">add_btn</string>
    <string name="type_account">Tipo de cuenta</string>
    <string name="txt_balance">Saldo de cuenta</string>
    <string name="dollar_sign">$</string>
    <string name="btn_add">Agregar</string>
    <string name="balance_entry_hint">0.00</string>
    <string name="name_acc">Nombre de cuenta</string>
    <string name="hint_name_account">Tarjeta CREDOMATIC</string>
    <string name="txt_payment_sch">Pago programado</string>
    <string name="txt_payments_msg">Priorize su futuro flujo de divisas</string>
    <string name="txt_add_payment_sch">Agrega uno con el boton de +</string>
    <string name="txt_name_payment">Nombre del pago</string>
    <string name="txt_category">Categoria</string>
    <string name="txt_amount">Monto</string>
    <string name="txt_date">Fecha a programar</string>
    <string name="txt_payment_hint">Pago de universidad</string>
    <string name="time_hint_txt">30/04/2020</string>


    <string name="txt_profile_settings">Configuración de perfil</string>
    <string name="txt_profile_settings_details">Puede cambiar su foto de perfil, nombre, cerrar sesion</string>
    <string name="txt_accounts_settings">Cuentas</string>
    <string name="txt_accounts_settings_details">Administre sus cuentas. Modificiar icono o nombre</string>
    <string name="txt_categories_settings">Categorías</string>
    <string name="txt_categories_settings_details">Administre sus categorias.\n\Agregue nuevas o modifique el icono o descripcion.</string>
    <string name="txt_notificationCenter_settings">Centro de notificaciones</string>
    <string name="txt_notificationCenter_settings_details">Configure las notificaciones que desee.</string>
    <string name="txt_setPin_settings">Establecer PIN</string>
    <string name="txt_setPin_settings_details">Mantenga seguros sus registros.</string>
    <string name="txt_rateUs_settings">Califícanos</string>
    <string name="txt_rateUs_settings_details">¡Ayudanos a crecer!</string>
    <string name="txt_version_settings">Versión</string>
    <string name="txt_version_settings_details">0.8</string>
    <string name="txt_extraSettings_settings">Otras configuraciones</string>

    <string name="fragment_profile_settings">Perfil</string>
    <string name="fragment_categories_settings">Categorias</string>
    <string name="fragment_accounts_settings">Cuentas</string>
    <string name="fragment_notificationCenter_settings">Centro de notificaciones</string>
    <string name="fragment_SetPin_settings">Establecer PIN</string>
    <string name="btn_save">Guardar</string>

    <string name="txt_profileUsername_settings">Nombre de usuario</string>
    <string name="txt_profileEmail_settings">Correo electronico</string>
    <string name="txt_Password_settings">Contraseña</string>
    <string name="hint_profilePassword_settings">Contraseña</string>

    <string name="txt_accountsName_settings">Cuenta a modificar</string>
    <string name="txt_categoriesAddName_settings">Categoria a añadir</string>
    <string name="hint_categoriesName_settings">Nombre de categoria</string>
    <string name="txt_categoriesEditName_settings">Categoria a modificar</string>
    <string name="txt_categoriesNewName_settings">Nuevo nombre de categoria</string>
    <string name="txt_notificationCenter_activate_settings">Activar notificaciones</string>
    <string name="txt_SetPin_add_settings">Añadir PIN</string>
    <string name="txt_profile_username_settings">Seleccione su imagen</string>
    <string name="description_image_accounts_settings">Imagen ajuste de cuentas</string>
    <string name="txt_profile_pic">Foto de perfil</string>

    <string name="txt_payments_dashboard">Pagos</string>
    <string name="txt_entry_dashboard">Ingresos</string>
    <string name="txt_expenses_dashboard">Gastos</string>
    <string name="txt_montly_graph">Gráfica mensual</string>
    <string name="txt_empty_dashboard">No tienes ningun movimiento</string>
    <string name="hint_empty_dashboard">¡Añade uno usando las opciones de ingresos o gastos!</string>
    <string name="fragment_montly_graph">Gráfica mensual</string>
    <string name="txt_month_graph">Mes</string>
    <string name="txt_number_zero">$0</string>
    <string name="txt_total_balance_dashboard">Balance total \nen cuenta</string>
    <string name="txt_btn_report">Reporte financiero</string>
    <string name="add_account">Agregar Cuenta</string>
    <string name="add_programmed_payment">Agregar pago programado</string>
    <string name="txt_balance_accounts">Balance</string>
    <string name="datePicker_text">Selecciona Fecha</string>
    <string name="register_text">Registrar</string>
    <string name="welcome_text">Bienvenido \u0020</string>
    <string name="a_odinia">A Odinia \u0020</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="do_you_have_account">¿Aún no tienes cuenta?</string>
    <string name="sign_up_text">Registrate</string>
    <string name="share_purchase">Compartir compra</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="full_name">Nombre completo</string>
    <string name="password_text">Contraseña</string>
    <string name="signUp_text_button">Registrarme</string>
    <string name="have_an_account_text">¿Ya tienes cuenta?</string>
    <string name="sign_in_now">Inicia sesión</string>
    <string name="log_out">Cerrar Sesion</string>
    <string name="txt_Payment_Account">Cuenta</string>
    <string name="txt_settings_categories_type">Tipo de categoria</string>
    <string name="txt_Pin_Authentication">Ingrese su codigo PIN</string>
    <string name="txt_confirm">Confirmar</string>
    <string name="example_name">Sueldo quincena</string>
    <string name="example_date">09:00, 13 Febrero, 2020</string>
    <string name="example_amount">$800.00</string>
    <string name="card_text">not</string>
    <string name="example_type">Tarjeta debito</string>
    <string name="example_namev2">Banco Credomatic</string>
    <string name="example_namev3">PAGO DE UNIVERSIDAD</string>
    <string name="example_category">Estudios</string>
    <string name="example_datev2">20/05/2020</string>
    <string name="upload_image_text">Subir imagen</string>

    <string-array name="types_of_accounts">
        <item>Efectivo</item>
        <item>Tarjeta de debito</item>
        <item>Tarjeta de credito</item>
    </string-array>

    <string-array name="category_payments">
        <item>Estudios</item>
        <item>Telefonia</item>
        <item>Luz/Agua</item>
        <item>Deuda</item>
    </string-array>

</resources>
