<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".views.ui.fragments.controls.SettingsFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/txt_profile_settings"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/big_text_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:fontFamily="@font/quicksand_light"
        android:text="@string/txt_profile_settings_details"
        android:textColor="@color/colorSubText"
        android:textSize="@dimen/small_text_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/txt_accounts_settings"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/big_text_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:fontFamily="@font/quicksand_light"
        android:text="@string/txt_accounts_settings_details"
        android:textColor="@color/colorSubText"
        android:textSize="@dimen/small_text_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/txt_categories_settings"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/big_text_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:fontFamily="@font/quicksand_light"
        android:text="@string/txt_categories_settings_details"
        android:textColor="@color/colorSubText"
        android:textSize="@dimen/small_text_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView5" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/fab_margin"
        android:background="@color/colorSubText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView6" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/txt_notificationCenter_settings"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/big_text_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView15" />


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:fontFamily="@font/quicksand_light"
        android:text="@string/txt_notificationCenter_settings_details"
        android:textColor="@color/colorSubText"
        android:textSize="@dimen/small_text_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/txt_setPin_settings"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/big_text_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:fontFamily="@font/quicksand_light"
        android:text="@string/txt_setPin_settings_details"
        android:textColor="@color/colorSubText"
        android:textSize="@dimen/small_text_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView9" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/txt_rateUs_settings"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/big_text_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:fontFamily="@font/quicksand_light"
        android:text="@string/txt_rateUs_settings_details"
        android:textColor="@color/colorSubText"
        android:textSize="@dimen/small_text_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView11" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/txt_version_settings"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/big_text_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView12" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:fontFamily="@font/quicksand_light"
        android:text="@string/txt_version_settings_details"
        android:textColor="@color/colorSubText"
        android:textSize="@dimen/small_text_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView13" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:fontFamily="@font/quicksand_light"
        android:text="@string/txt_extraSettings_settings"
        android:textColor="@color/colorSubText"
        android:textSize="@dimen/small_text_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/image_btn_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView12"
        app:srcCompat="@drawable/ic_logo_horizontal" />

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>