<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.womannotfound.odinia.views.ui.fragments.home.HomeFragment"
        android:label="@string/menu_item_home"
        tools:layout="@layout/fragment_home">
        <argument
            android:name="name"
            app:argType="string"
            android:defaultValue=" " />
        <argument
            android:name="type"
            app:argType="string"
            android:defaultValue=" " />
        <argument
            android:name="balance"
            app:argType="string"
            android:defaultValue=" " />
        <action
            android:id="@+id/action_nav_home_to_nav_formAccount"
            app:destination="@id/nav_formAccount" />
    </fragment>
    <fragment
        android:id="@+id/nav_entries"
        android:name="com.womannotfound.odinia.views.ui.fragments.operations.EntryMoneyFragment"
        android:label="@string/menu_item_entries"
        tools:layout="@layout/fragment_entry_money" />
    <fragment
        android:id="@+id/nav_egress"
        android:name="com.womannotfound.odinia.views.ui.fragments.operations.EgressMoneyFragment"
        android:label="@string/menu_item_egress"
        tools:layout="@layout/fragment_egress_money" />
    <fragment
        android:id="@+id/nav_payments"
        android:name="com.womannotfound.odinia.views.ui.fragments.operations.PaymentsFragment"
        android:label="@string/menu_item_payments"
        tools:layout="@layout/fragment_payments" >
        <action
            android:id="@+id/action_nav_payments_to_programmedPaymentFragment"
            app:destination="@id/nav_programmedPayment" />
        <argument
            android:name="name"
            app:argType="string"
            android:defaultValue=" " />
        <argument
            android:name="category"
            app:argType="string"
            android:defaultValue=" " />
        <argument
            android:name="amount"
            app:argType="string"
            android:defaultValue=" " />
        <argument
            android:name="date"
            app:argType="string"
            android:defaultValue=" " />
    </fragment>
    <fragment
        android:id="@+id/nav_movements"
        android:name="com.womannotfound.odinia.views.ui.fragments.dashboard.AccountDashboardFragment"
        android:label="@string/menu_item_movements"
        tools:layout="@layout/fragment_account_dashboard" />
    <fragment
        android:id="@+id/nav_help"
        android:name="com.womannotfound.odinia.views.ui.fragments.controls.HelpFragment"
        android:label="@string/menu_item_help"
        tools:layout="@layout/fragment_help" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.womannotfound.odinia.views.ui.fragments.controls.SettingsFragment"
        android:label="@string/menu_item_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_programmedPayment"
        android:name="com.womannotfound.odinia.views.ui.fragments.operations.ProgrammedPaymentFragment"
        android:label="ProgrammedPaymentFragment"
        tools:layout="@layout/fragment_programmed_payment">
        <action
            android:id="@+id/action_programmedPaymentFragment_to_nav_payments"
            app:destination="@id/nav_payments" />
    </fragment>
    <fragment
        android:id="@+id/nav_formAccount"
        android:name="com.womannotfound.odinia.views.ui.fragments.operations.AccountFormFragment"
        android:label="AccountFormFragment"
        tools:layout="@layout/fragment_account_form">
        <action
            android:id="@+id/action_nav_formAccount_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

</navigation>